Added swagger authentication
